# cls_test

./: .buildinfo  .gitignore  Dockerfile  NEW_PIPELINE.md  PIPELINE.md  README.md  api.html  bottles.html  classification.html  clear.py  configuration.html  demonstration.html  deployment.html  docker-compose.yaml  genindex.html  get_started.html  get_started_with_classification.html  get_started_with_instance_segmentation.html  index.html  instance.html  instance_segmentation.html  model_storage_deployment.html  modeler_deployment.html  objects.inv  postgres.html  pyproject.toml  requirements.txt  search.html  searchindex.js  segmentation_format.html  setup.py  setup.sh  usage.html
.doctrees/: api.doctree  bottles.doctree  classification.doctree  configuration.doctree  demonstration.doctree  deployment.doctree  environment.pickle  get_started.doctree  get_started_with_classification.doctree  get_started_with_instance_segmentation.doctree  index.doctree  instance.doctree  instance_segmentation.doctree  model_storage_deployment.doctree  modeler_deployment.doctree  postgres.doctree  segmentation_format.doctree  usage.doctree
SR/: SD2x&4xUpscaler.ipynb
_sources/: bottles.rst.txt  classification.rst.txt  configuration.rst.txt  demonstration.rst.txt  deployment.rst.txt  get_started.rst.txt  get_started_with_classification.rst.txt  get_started_with_instance_segmentation.rst.txt  index.rst.txt  instance.rst.txt  instance_segmentation.rst.txt  postgres.rst.txt  segmentation_format.rst.txt
classification/: data_info.py  get_model.ipynb  group_loader.py  inference.py  train.py  (+10 more)
(+165 files in other folders)
