[tool.poetry]
name = "cls"
version = "0.1.0"
description = ""
authors = ["SanchoPanso <20alexchernik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
albumentations = "^1.3.1"
easydict = "^1.12"
gradio = "^4.19.0"
numpy = "^1.26.4"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
onnx = "^1.15.0"
opencv-python = "^4.9.0.80"
pandas = "^2.2.0"
pillow = "^10.2.0"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
pytest = "^8.0.0"
pyyaml = "^6.0.1"
roboflow = "^1.1.19"
scikit-learn = "^1.4.0"
sqlalchemy = "^2.0.27"
tritonclient = {extras = ["http"], version = "^2.42.0"}
ultralytics = "^8.1.14"
uvicorn = "^0.27.1"
wandb = "^0.16.3"
pytorch-lightning = "^2.2.0.post0"
kornia = "^0.7.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
